feat: Add Google login and custom font to login page
Introduced GoogleLoginButton component for authentication and integrated it into LoginPage. Added KIMM custom fonts and updated main_logo.png. Updated .gitignore to exclude environment files.

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,24 @@
 @import 'tailwindcss';
 
+@font-face {
+  font-family: 'KIMM';
+  font-weight: 300;
+  font-style: normal;
+  src: url('./assets/font/KIMM_Light.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'KIMM';
+  font-weight: 700;
+  font-style: normal;
+  src: url('./assets/font/KIMM_bold.ttf') format('truetype');
+}
+
 @theme {
   --color-main: #262b33;
   --color-sub: #738199;
+
+  --font-family-kimm: KIMM, -apple-system, BlinkMacSystemFont, system-ui, sans-serif;
 }
 
 /* tailwind prefix breakpoints
